--- a/LINQ - Quantifiers/C#/Quantifiers/j_Quantifiers.csproj
+++ b/LINQ - Quantifiers/C#/Quantifiers/j_Quantifiers.csproj
@@ -58,6 +58,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\LinqSamplesCommon\LinqSamplesCommon.csproj">
+      <Project>{69011370-3f14-4d1d-b1de-c5f89999594f}</Project>
+      <Name>LinqSamplesCommon</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
